--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
            <version>[4.0,)</version>
        </dependency>
        
+       <dependency>
+       	<groupId>com.careydevelopment</groupId>
+       	<artifactId>properties-support</artifactId>
+       	<version>[1.0,)</version>
+    	</dependency>
+       
  		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
