--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
   </parent>
   
     <dependencies>
+    <dependency>
+	<groupId>org.apache.httpcomponents</groupId>
+	<artifactId>httpclient</artifactId>
+	<version>4.5.2</version>
+</dependency>
+	    
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
